# MusicBot

./: .gitignore  config.py  main.py  pyproject.toml
commands/: general.py  music.py
handlers/: errors.py  voice.py
music_logic/: download.py  player.py  volume.py
utils/: embed.py  format.py
